<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height148px"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="#ffffff"
        android:textSize="@dimen/width52px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height43px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llDownload"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_file_download_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/download_app"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height43px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llSimulationRequest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_explore_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/simulation_request"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llApiFilter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_filter_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/api_filter"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llValidityPeriod"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/validity_period"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llLinkSwitch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_transform_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/link_switch"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llWebDebug"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_web_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/web_debug"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llDeviceInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_device_hub_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/device_info"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height43px"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/llBoutWe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height127px"
        android:background="@drawable/layout_ripple_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:src="@drawable/ic_info_outline_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width43px"
            android:layout_weight="1"
            android:text="@string/about_we"
            android:textColor="@color/colorMoreItemText"
            android:textSize="@dimen/width45px" />

    </LinearLayout>

</LinearLayout>